fixed z-index

--- a/resources/styles/cookies-consent.scss
+++ b/resources/styles/cookies-consent.scss
@@ -582,7 +582,7 @@
       position: fixed;
       bottom: 1.25rem;
       left: 1.25rem;
-      z-index: 10000000;
+      z-index: 1000;
       width: 650px;
       display: none;
       max-height: 80%;
